--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/css/style.css" />
     <link rel="icon" type="image/x-icon" href="/src/img/icons8-contatore-16.png">
-    <title>Counter Antisthress!</title>
+    <title>Counter Antistress!</title>
   </head>
 
   <body>
