--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="/src/img/icons8-contatore-16.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/src/img/icons8-contatore-16.png"
+    />
     <title>Counter Antistress!</title>
   </head>
 
