--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
       href="/src/img/icons8-contatore-16.png"
     />
-    <title>Counter Antistress!</title>
+    <title>Counter Antistress</title>
   </head>
 
   <body>
